# goit-web-hw-10

./: pyproject.toml
app_qoutes/: manage.py
app_qoutes/app_qoutes/: asgi.py  settings.py  urls.py  wsgi.py
app_qoutes/quotes/: forms.py  models.py  urls.py  views.py
app_qoutes/quotes/migrations/: 0001_initial.py  0002_alter_quote_tags.py  0003_alter_quote_author.py  0004_alter_quote_author.py  0005_alter_quote_author_alter_quote_quote.py  0006_alter_quote_author.py  0007_alter_quote_author.py
app_qoutes/quotes/templatetags/: custom_filters.py
app_qoutes/static/quotes/: main.css
app_qoutes/static/users/: main.css
app_qoutes/templates/: base.html
app_qoutes/templates/quotes/: about-author.html  add-author.html  add-quote.html  all-quotes.html
app_qoutes/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html
app_qoutes/users/: forms.py  urls.py  views.py
